--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							</article>
 
 						<!-- Connect -->
-							<article id="contact">
+							<article id="Connect">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 									<div class="field half first">
